# software-plus

./: .env  README.md  index.html  package.json
.github/workflows/: main.yml  tauri.yml  test.yml
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-02-03-161733_users/: down.sql
src-tauri/migrations/2023-02-03-161755_videos/: down.sql  up.sql
src-tauri/migrations/2023-02-03-163034_license_key/: down.sql
src-tauri/migrations/2023-02-17-160238_create_users/: down.sql  up.sql
src-tauri/migrations/2023-02-17-162017_create_users/: down.sql  up.sql
src-tauri/migrations1/2023-02-03-161733_users/: up.sql
src-tauri/migrations1/2023-02-03-163034_license_key/: up.sql
src-tauri/migrations2/2023-02-17-142639_license_key/: down.sql
src-tauri/migrations2/2023-02-17-142650_create_users/: up.sql
src-tauri/src/: main.rs  prelude.rs  schema.rs
src-tauri/src/db/: mod.rs
src-tauri/src/ipc/: key.rs  mod.rs  response.rs  user.rs
src-tauri/src/models/: key.rs  mod.rs  users.rs  videos.rs
src-tauri/src/utils/: error.rs  keyverifier.rs  macros.rs  migration.rs  mod.rs
src/bindings/: AuthData.ts  Key.ts  KeyForCreate.ts  ModelMutateResultData.ts  NewUser.ts  NewVideo.ts  User.ts  UserForCreate.ts  Video.ts  VideoForDelete.ts  VideoForUpdate.ts
src/components/: AddKey.tsx  AddUser.tsx  FormWraper.tsx
src/hooks/: useAuth.ts
src/model/: index.ts
src/pages/: Auth.tsx
src/utils/: ipc.ts  typeAssert.ts
~/.tauri/: myapp.key  myapp.key.pub
