[package]
name = "software-plus"
version = "0.1.0"
description = "business manager softwarej"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "updater"] }
diesel = {version="2.0.3",features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
diesel_migrations = {  version ="2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.25.0", features = ["bundled"] }
thiserror = "1"
ts-rs = { version = "6" }
license-key = "0.1.0"
magic-crypt = "3.1.12"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
